--- a/pom.xml
+++ b/pom.xml
@@ -907,7 +907,7 @@
 		<slf4j.version>1.7.12</slf4j.version>
 		<spring.version>3.2.13.RELEASE</spring.version>
 		<spring.security.version>3.1.4.RELEASE</spring.security.version>
-		<spring.security_2.version>2.0.4</spring.security_2.version>
+		<spring.security_2.version>2.0.8.RELEASE</spring.security_2.version>
 		<aspectj.version>1.6.5</aspectj.version>
 
 		<wicket.version>6.6.0</wicket.version>
