fixes #31 Upgrade Guava to version 24.1.1-jre to avoid vulnerability

--- a/pom.xml
+++ b/pom.xml
@@ -619,6 +619,12 @@
             </dependency>
 
             <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>24.1.1-jre</version>
+            </dependency>
+
+            <dependency>
                 <groupId>org.easymock</groupId>
                 <artifactId>easymock</artifactId>
                 <version>3.0</version>
