--- a/superfly-service/pom.xml
+++ b/superfly-service/pom.xml
@@ -92,5 +92,10 @@
             <groupId>com.warrenstrange</groupId>
             <artifactId>googleauth</artifactId>
         </dependency>
+        <dependency>
+            <!--override googleauth's httpclient-->
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+        </dependency>
     </dependencies>
 </project>
