--- a/superfly-web/src/main/webapp/WEB-INF/web.xml
+++ b/superfly-web/src/main/webapp/WEB-INF/web.xml
@@ -91,6 +91,10 @@
         <param-value>false</param-value>
     </context-param>
     <context-param>
+        <param-name>superfly-csrf-login-validator-disabled</param-name>
+        <param-value>false</param-value>
+    </context-param>
+    <context-param>
            <param-name>superfly-max-sso-session-age-minutes</param-name>
            <param-value>30</param-value>
        </context-param>
