--- a/superfly-web/src/main/webapp/WEB-INF/web.xml
+++ b/superfly-web/src/main/webapp/WEB-INF/web.xml
@@ -16,7 +16,7 @@
     <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>
-            /WEB-INF/spring/applicationContext-security-!policy!.xml
+            /WEB-INF/spring/applicationContext-security.xml
             /WEB-INF/spring/applicationContext-common.xml
             /WEB-INF/spring/applicationContext-datasource.xml
             /WEB-INF/spring/applicationContext-dao.xml
@@ -42,8 +42,29 @@
 
     <context-param>
         <param-name>superfly-policy</param-name>
-        <param-value>none</param-value> <!-- none or pcidss -->
+        <param-value>pcidss</param-value> <!-- none or pcidss -->
     </context-param>
+
+    <context-param>
+        <param-name>superfly-cryptoSecret</param-name>
+        <param-value>lsjdflsdifusodf87s8df78391231f</param-value>
+    </context-param>
+    <context-param>
+        <param-name>superfly-cryptoSalt</param-name>
+        <param-value>ssudyfsudifs8d7fsd8f6s8df72y2uy3tu23f48</param-value>
+    </context-param>
+
+    <!-- multi-factor authentication -->
+    <context-param>
+        <param-name>superfly-mfa-enabled</param-name>
+        <param-value>false</param-value>
+    </context-param>
+    <!-- Force users to use this MFA method, if superfly-mfa-enabled = true -->
+    <context-param>
+        <param-name>superfly-mfa-method-force</param-name>
+        <param-value>none</param-value> <!-- none or google_auth -->
+    </context-param>
+
     <!-- This is for constant salt generator -->
     <context-param>
         <param-name>superfly-salt</param-name>
@@ -55,7 +76,10 @@
         <param-value>6</param-value>
     </context-param>
 
-    <!-- Modification of ANY of HOTP-related parameters here (except for
+    <!--
+        ### Deprecated, use superfly-mfa-method-force for multi-factor authentication
+
+        Modification of ANY of HOTP-related parameters here (except for
         lookahead window size) must be followed by regeneration of user tokens
         as server-side HOTP sequences will be changed.
         Table size leads to table of distinct size, but the sequence remains
@@ -68,6 +92,7 @@
         <param-name>superfly-hotpCodeDigits</param-name>
         <param-value>6</param-value>
     </context-param>
+
     <context-param>
         <param-name>superfly-hotpLookahead</param-name>
         <param-value>10</param-value>
@@ -78,14 +103,12 @@
     </context-param>
     <context-param>
         <param-name>superfly-enable-hotp-emails</param-name>
-        <param-value>true</param-value>
-    </context-param>
-
-    <context-param>
-        <param-name>disable-hotp</param-name>
         <param-value>false</param-value>
     </context-param>
-
+    <context-param>
+        <param-name>superfly-csrf-login-validator-enable</param-name>
+        <param-value>true</param-value>
+    </context-param>
     <context-param>
            <param-name>superfly-max-sso-session-age-minutes</param-name>
            <param-value>30</param-value>
