--- a/pom.xml
+++ b/pom.xml
@@ -469,6 +469,18 @@
                     </exclusion>
                 </exclusions>
             </dependency>
+            <dependency>
+                <!--override googleauth's httpclient version-->
+                <groupId>org.apache.httpcomponents</groupId>
+                <artifactId>httpclient</artifactId>
+                <version>4.5.13</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>commons-logging</groupId>
+                        <artifactId>commons-logging</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
 
             <dependency>
                 <groupId>com.googlecode.xremoting</groupId>
