--- a/pom.xml
+++ b/pom.xml
@@ -883,7 +883,7 @@
     <properties>
         <jdbcproc.version>1.1-4</jdbcproc.version>
         <slf4j.version>1.7.12</slf4j.version>
-        <spring.version>5.2.9.RELEASE</spring.version>
+        <spring.version>5.3.11</spring.version>
         <spring.security.version>5.4.7</spring.security.version>
         <aspectj.version>1.6.5</aspectj.version>
 
