--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,7 +21,7 @@ jobs:
       with:
         java-version: 1.8
     - name: Build with Maven
-      run: (cd ./install && ./install.sh) && ./mvnw -B verify
+      run: (cd ./install && ./install.sh) && ./mvnw -B --fail-at-end verify
 #    - name: Codecov
       # You may pin to the exact commit or the version.
       # uses: codecov/codecov-action@1f8f3abcccf7960749744fd13547965f0e7d1bdd
